--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -18,6 +18,8 @@
           <tr>
             <th scope="col">Short URL</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -25,6 +27,12 @@
             <tr>
               <td><%= url %></td>
               <td><%= urls[url] %></td>
+              <form method="POST" action="/urls/<%= url %>/edit">
+                <td><button type="submit" class="btn btn-primary">Edit</button></td>
+              </form>
+              <form method="POST" action="/urls/<%= url %>/delete">
+                <td><button type="submit" class="btn btn-primary">Delete</button></td>
+              </form>
             </tr>
           <% } %>
         </tbody>
