--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,6 +8,17 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <% if (username !== undefined) { %>
+          <form class="form-inline" action="/logout" method="POST">
+            <a class="nav-item nav-link"><%= username %></a>
+            <button type="submit" class="btn btn-primary">Logout</button>
+          </form>
+        <% } else { %>
+          <form class="form-inline" action="/login" method="POST">
+            <input class="form-control" type="text" name="username" style="width: 300px; margin: 1em">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        <% } %>
       </div>
     </div>
   </nav>
