--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,8 +15,9 @@
       </div>
     <div class="card-footer text-muted">
       <form class="form-inline" action="/urls/<%= shortURL %>/update" method="POST">
-      <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
-      <button type="submit" class="btn btn-primary">Submit</button>
+        <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </div>
   </div>
   <!-- Bootstrap JS -->
