--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,9 +8,9 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <% if (username !== undefined) { %>
+        <% if (user !== undefined) { %>
           <form class="form-inline" action="/logout" method="POST">
-            <a class="nav-item nav-link"><%= username %></a>
+            <a class="nav-item nav-link"><%= user.email %></a>
             <button type="submit" class="btn btn-primary">Logout</button>
           </form>
         <% } else { %>
