--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/urls/new">Create New Url</a>
         <% if (user !== undefined) { %>
           <form class="form-inline" action="/logout" method="POST">
             <a class="nav-item nav-link"><%= user.email %></a>
